Add meta tags to index.html, remove unused images from public/img folder

--- a/vuemusic/public/index.html
+++ b/vuemusic/public/index.html
@@ -6,7 +6,25 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel='icon' sizes='192x192' href='<%= BASE_URL %>img/logo-gradient.png'>
     <link rel='shortcut icon' type='image/png' href='<%= BASE_URL %>img/logo-gradient.png'>
-    <title>Vue Music</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Vue Music • Stream music online</title>
+    <meta name="title" content="Vue Music • Stream music online">
+    <meta name="description" content="With Vue Music you can access and stream anything from your Spotify™ library on the web.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ruurd.dev/vuemusic/">
+    <meta property="og:title" content="Vue Music • Stream music online">
+    <meta property="og:description" content="With Vue Music you can access and stream anything from your Spotify™ library on the web.">
+    <meta property="og:image" content="img/preview-icon.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://ruurd.dev/vuemusic/">
+    <meta property="twitter:title" content="Vue Music • Stream music online">
+    <meta property="twitter:description" content="With Vue Music you can access and stream anything from your Spotify™ library on the web.">
+    <meta property="twitter:image" content="img/preview-icon.png">
   </head>
   <body>
     <noscript>
