Add now playing page, fix meta tags in index.html

--- a/vuemusic/public/index.html
+++ b/vuemusic/public/index.html
@@ -17,14 +17,14 @@
     <meta property="og:url" content="https://ruurd.dev/vuemusic/">
     <meta property="og:title" content="Vue Music • Stream music online">
     <meta property="og:description" content="With Vue Music you can access and stream anything from your Spotify™ library on the web.">
-    <meta property="og:image" content="img/preview-icon.png">
+    <meta property="og:image" content="https://ruurd.dev/vuemusic/img/preview-icon.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://ruurd.dev/vuemusic/">
     <meta property="twitter:title" content="Vue Music • Stream music online">
     <meta property="twitter:description" content="With Vue Music you can access and stream anything from your Spotify™ library on the web.">
-    <meta property="twitter:image" content="img/preview-icon.png">
+    <meta property="twitter:image" content="https://ruurd.dev/vuemusic/img/preview-icon.png">
   </head>
   <body>
     <noscript>
