Update ytdl, fix material design font

--- a/vuemusic/public/index.html
+++ b/vuemusic/public/index.html
@@ -1,36 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel='icon' sizes='192x192' href='<%= BASE_URL %>img/logo-gradient.png'>
     <link rel='shortcut icon' type='image/png' href='<%= BASE_URL %>img/logo-gradient.png'>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
 
     <!-- Primary Meta Tags -->
     <title>Vue Music • Stream music online</title>
     <meta name="title" content="Vue Music • Stream music online">
-    <meta name="description" content="With Vue Music you can access and stream anything from your Spotify™ library on the web.">
+    <meta name="description"
+          content="With Vue Music you can access and stream anything from your Spotify™ library on the web.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ruurd.dev/vuemusic/">
     <meta property="og:title" content="Vue Music • Stream music online">
-    <meta property="og:description" content="With Vue Music you can access and stream anything from your Spotify™ library on the web.">
+    <meta property="og:description"
+          content="With Vue Music you can access and stream anything from your Spotify™ library on the web.">
     <meta property="og:image" content="https://ruurd.dev/vuemusic/img/preview-icon.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://ruurd.dev/vuemusic/">
     <meta property="twitter:title" content="Vue Music • Stream music online">
-    <meta property="twitter:description" content="With Vue Music you can access and stream anything from your Spotify™ library on the web.">
+    <meta property="twitter:description"
+          content="With Vue Music you can access and stream anything from your Spotify™ library on the web.">
     <meta property="twitter:image" content="https://ruurd.dev/vuemusic/img/preview-icon.png">
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+</head>
+<body>
+<noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong>
+</noscript>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
 </html>
